# verifier_primacy_labs

./: CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
data/mmd_test/experiment_outputs/: gemini_2.0_flash_lite_20260129_161539.json  gemini_2.0_flash_lite_20260129_165332.json  gemini_2.5_pro_20260129_152832.json
deck/skellar/: README.md  custom.scss  verifier_primacy.html  verifier_primacy.qmd  verifier_primacy_standalone.html  verifier_primacy_v2.html  verifier_primacy_v2.qmd  verifier_primacy_v2_short.html  verifier_primacy_v2_short.qmd  verifier_primacy_v3.html  verifier_primacy_v3.qmd  verifier_primacy_v4.html  verifier_primacy_v4.qmd
docs/: index.html
notebooks/: README.md  kl_divergence_playground.ipynb  mmd_article.ipynb  mmd_test.ipynb
notebooks/experiment_outputs/: gemini_2.5_pro_20260129_150503.json  gemini_3_flash_preview_20260129_150419.json  gemini_3_flash_preview_20260129_152753.json
resources/: # The AI Evals Movement: A Comprehensive Source Analysis.md  # Verification primitives: 20 foundational methodologies across domains.md  ai_evals_links.md
src/: verification_primitives_examples.py
substack/: detecting-llm-drift-mmd.md
