[project]
name = "verifier-primacy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.2",
    "requests>=2.32.5",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "ipykernel",
    "google>=3.0.0",
    "genai>=2.1.0",
    "google-genai>=1.60.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
    "nbconvert>=7.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.14",
]
